# rayman-ps1-decomp

./: .clang-format  .gitignore  CMakeLists.txt  README.md  addrs-u.txt  funcs-u.txt  mk-splat.mk
.github/workflows/: build-pc.yml  build.yml
include/: bonus_343EC.h  boss.h  cam_scroll_29B5C.h  card.h  cheats.h  common.h  depart_dead.h  first_init.h  fond_5BD8C.h  gendoor.h  input_ED20.h  loading_794DC.h  loading_DA64.h  loading_E99C.h  loading_tex.h  macro.inc  main_moteur.h  moteur_update.h  music.h  password.h  save.h  sound.h  synchro_loop.h  video.h  vram.h  world_map_677C0.h
include/collision/: block_22C84.h  collision.h  etat.h
include/common/: display.h  fileinfo.h  obj.h
include/draw/: draw_14FF4.h  draw_548CC.h  draw_hud.h  fade.h  fond_10B3C.h  rollup_trans.h  text_18118.h
include/menu/: menu_6A3BC.h  menu_7EEE4.h  menu_7F4B4.h  menu_82008.h  menu_card_7C028.h
include/ray/: ray_30A64.h
include/unknown/: 29A18.h  48528.h  4BFCC.h  5C2BC.h  7BB28.h  A3B0.h  AACC.h
src/: bonus_343EC.c  boss.c  cam_scroll_29B5C.c  card.c  cheats.c  demo_7F2BC.c  demo_B3F8.c  depart_dead.c  first_init.c  fond_5BD8C.c  gendoor.c  input_ED20.c  loading_794DC.c  loading_DA64.c  loading_E99C.c  loading_tex.c  main.c  main_moteur.c  moteur_init_end.c  moteur_update.c  music.c  nova.c  obj_init_kill.c  obj_update.c  obj_util.c  password.c  save.c  sound.c  synchro_loop.c  victoire.c  video.c  vignet.c  vram.c  world_map_677C0.c  world_map_95CC.c
src/collision/: block_22C84.c  block_6E5E0.c  collision.c  etat.c
src/data/collision/: collision_9E79C.c
src/data/draw/: fade_A3568.c
src/draw/: draw_14FF4.c  draw_548CC.c  draw_hud.c  fade.c  fond_10B3C.c  rollup_trans.c  text_18118.c
src/menu/: menu_6A3BC.c  menu_7EEE4.c  menu_7F4B4.c  menu_82008.c  menu_card_7C028.c
src/ray/: ray_30A64.c  ray_32398.c  ray_5D190.c
src/unknown/: 29A18.c  29F3C.c  48528.c  4BFCC.c  5C2BC.c  7BB28.c  A3B0.c  AACC.c
