cmake_minimum_required(VERSION 3.10)

project(rayman)

set(CMAKE_C_STANDARD 99)
set(CMAKE_CXX_STANDARD 98)

if(UNIX)
    set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -m32")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -m32")
    set(CMAKE_EXE_LINKER_FLAGS "${CMAKE_EXE_LINKER_FLAGS} -m32")
    # todo: Find a way to not just hardcode this for arch
    # best way would be to fix 64bit :p
    set(CMAKE_SYSTEM_LIBRARY_PATH /usr/lib32) 
elseif(WIN32)
    set(CMAKE_GENERATOR_PLATFORM Win32)
endif()

set(SDL_STATIC ON)
add_subdirectory(tools/psyz/psyz build)

add_executable(${PROJECT_NAME} 
    src/bonus_343EC.c
    src/bonus_35FB4.c
    src/bonus_372E0.c
    src/boss.c
    src/cam_scroll_29B5C.c
    src/cam_scroll_340A4.c
    src/card.c
    src/cheats.c
    src/collision/bit_util.c
    src/collision/block_22C84.c
    src/collision/block_6E5E0.c
    src/collision/collision.c
    src/collision/etat.c
    src/collision/proj.c
    src/command_494FC.c
    src/command_56AF0.c
    src/continue.c
    src/data/bonus_AABF8.c
    src/data/bonus_AAE20.c
    src/data/cam_scroll_9E814.c
    src/data/cam_scroll_AA5FC.c
    src/data/card_AA81C.c
    src/data/cheats_AA7C8.c
    src/data/cheats_AA8D8.c
    src/data/collision/bit_util.c
    src/data/collision/block_9E49C.c
    src/data/collision/collision_9D294.c
    src/data/collision/collision_9E79C.c
    src/data/command_A36B8.c
    src/data/common/display_AA67C.c
    src/data/common/mapdata_9CA74.c
    src/data/demo_9F448.c
    src/data/depart_dead_AA8DC.c
    src/data/draw/draw_A36AC.c
    src/data/draw/draw_AA774.c
    src/data/draw/draw_AA864.c
    src/data/draw/draw_AAC18.c
    src/data/draw/draw_AAE00.c
    src/data/draw/draw_hud_AA77C.c
    src/data/draw/fade_A3568.c
    src/data/draw/fade_AA7E0.c
    src/data/draw/fade_AAC10.c
    src/data/draw/fond_A29C0.c
    src/data/draw/fond_AA744.c
    src/data/draw/rollup_trans_AA5E4.c
    src/data/draw/text_9ED80.c
    src/data/draw/text_A29CC.c
    src/data/draw/text_AA610.c
    src/data/first_init_AA8E0.c
    src/data/first_init_AAC38.c
    src/data/input_AA6FC.c
    src/data/loading_9FB74.c
    src/data/loading_A0338.c
    src/data/loading_AA6EC.c
    src/data/loading_AA8C8.c
    src/data/loading_tex_9FC68.c
    src/data/main_moteur_9FC58.c
    src/data/main_moteur_AA670.c
    src/data/main_moteur_AA680.c
    src/data/menu/menu_9EDBC.c
    src/data/menu/menu_AA614.c
    src/data/menu/menu_AA8AC.c
    src/data/menu/menu_AA918.c
    src/data/menu/menu_card_9ED48.c
    src/data/menu/menu_card_AA8F4.c
    src/data/music_9FC78.c
    src/data/music_AA6A4.c
    src/data/obj/bb1_A3850.c
    src/data/obj/bb1_AA8A0.c
    src/data/obj/dark_A3C88.c
    src/data/obj/dark_AA8C0.c
    src/data/obj/eyes_9E69C.c
    src/data/obj/graine_AAC08.c
    src/data/obj_init_kill.c
    src/data/obj/mama_pirate.c
    src/data/obj/medaillon_toon_AA65C.c
    src/data/obj/moskito_A3BC4.c
    src/data/obj/moskito_AA8BC.c
    src/data/obj/saxo.c
    src/data/obj/scorpion_9CA5C.c
    src/data/obj/scorpion_A3BA4.c
    src/data/obj/space_mama_A38F8.c
    src/data/obj_util.c
    src/data/password_A3CD8.c
    src/data/password_AA904.c
    src/data/ray/angle_rayman_9EB18.c
    src/data/save.c
    src/data/sound_A2A78.c
    src/data/sound_AA7C0.c
    src/data/sound_AA7CC.c
    src/data/text_AA7A4.c
    src/data/unknown/9E8F8.c
    src/data/unknown/9EDDC.c
    src/data/unknown/AA608.c
    src/data/unknown/AA860.c
    src/data/unknown/AA8F0.c
    src/data/victoire_9EDF4.c
    src/data/video_AA6DC.c
    src/data/video_AADE0.c
    src/data/world_map_9EB5C.c
    src/data/world_map_AA5F4.c
    src/data/world_map_AA8A4.c
    src/demo_7F2BC.c
    src/demo_9FD4.c
    src/demo_B3F8.c
    src/depart_dead.c
    src/draw/draw_14FF4.c
    src/draw/draw_548CC.c
    src/draw/draw_hud.c
    src/draw/fade.c
    src/draw/fond_10B3C.c
    src/draw/rollup_trans.c
    src/draw/text_18118.c
    src/first_init.c
    src/fond_5BD8C.c
    src/gendoor.c
    src/input_ED20.c
    src/loading_794DC.c
    src/loading_DA64.c
    src/loading_E99C.c
    src/loading_tex.c
    src/luciole.c
    src/main.c
    src/main_moteur.c
    src/menu/menu_6A3BC.c
    src/menu/menu_7EEE4.c
    src/menu/menu_7F4B4.c
    src/menu/menu_82008.c
    src/menu/menu_card_7C028.c
    src/moteur_init_end.c
    src/moteur_update.c
    src/music.c
    src/nova.c
    src/num_level_36260.c
    src/num_level_3D738.c
    src/obj/badguy.c
    src/obj/bag1.c
    src/obj/balle.c
    src/obj/bateau_command.c
    src/obj/batteur_fou.c
    src/obj/bb1.c
    src/obj/bb1_plat_command.c
    src/obj/big_clown.c
    src/obj/black_ray_command.c
    src/obj/blacktoon1.c
    src/obj/blacktoon_eyes_command.c
    src/obj/bouee_joe_command.c
    src/obj/cage.c
    src/obj/cage_init.c
    src/obj/caisse_claire_command.c
    src/obj/clown_tnt.c
    src/obj/clown_tnt_command.c
    src/obj/corde.c
    src/obj/corde_command.c
    src/obj/cymbal2.c
    src/obj/cymbal.c
    src/obj/dark2_pink_fly.c
    src/obj/dark_729F0.c
    src/obj/dark_74FEC.c
    src/obj/dark_phase2.c
    src/obj/dark_phase2_str.c
    src/obj/drop_command.c
    src/obj/eau.c
    src/obj/eclair_command.c
    src/obj/ens_command.c
    src/obj/explosion.c
    src/obj/eyes_3C3A8.c
    src/obj/eyes_4BC40.c
    src/obj/falling_obj_command.c
    src/obj/fee_3D76C.c
    src/obj/fee_4DFD0.c
    src/obj/fire.c
    src/obj/fish.c
    src/obj/flash_command.c
    src/obj/genebadguy_command.c
    src/obj/graine.c
    src/obj/herse.c
    src/obj/hyb_bbf2.c
    src/obj/hybride_mosams_command.c
    src/obj/hybride_stosko.c
    src/obj_init_kill.c
    src/obj/joe_command.c
    src/obj/mama_pirate.c
    src/obj/maracas.c
    src/obj/maracas_command.c
    src/obj/medaillon_toon.c
    src/obj/mite_badguy.c
    src/obj/mite.c
    src/obj/moskito.c
    src/obj/moving_platform_command.c
    src/obj/mst_scroll.c
    src/obj/mus_wait.c
    src/obj/nova2_command.c
    src/obj/petit_couteau_command.c
    src/obj/photographe_command.c
    src/obj/pi_boum.c
    src/obj/pirate_guetteur.c
    src/obj/pirate_ngawe.c
    src/obj/pirate_poelle.c
    src/obj/platform.c
    src/obj/poelle_command.c
    src/obj/poi_command.c
    src/obj/poing.c
    src/obj/rayon.c
    src/obj/reducteur.c
    src/obj/saxo.c
    src/obj/scorpion.c
    src/obj/space_mama.c
    src/obj/spider_395B0.c
    src/obj/spider_command.c
    src/obj/spider_plafond.c
    src/obj/stonebomb.c
    src/obj/stonebomb_command.c
    src/obj/stonedog_command.c
    src/obj/stoneman_command.c
    src/obj/stonewoman.c
    src/obj/superhelico_init.c
    src/obj/tire_bouchon_command.c
    src/obj/trompette.c
    src/obj/trompette_command.c
    src/obj/ufo_idc.c
    src/obj_update.c
    src/obj_util.c
    src/obj/vitrail.c
    src/obj/walk_note_command.c
    src/obj/wat_clown.c
    src/password.c
    src/pix_gerbe.c
    src/ray/angle_rayman.c
    src/ray/ray_30A64.c
    src/ray/ray_32398.c
    src/ray/ray_5D190.c
    src/save.c
    src/snow.c
    src/sound.c
    src/special_platform.c
    src/synchro_loop.c
    src/text_24E10.c
    src/timers.c
    src/unknown/2539C.c
    src/unknown/29A18.c
    src/unknown/29F3C.c
    src/unknown/3ED10.c
    src/unknown/3F0B8.c
    src/unknown/48528.c
    src/unknown/4BFCC.c
    src/unknown/5C2BC.c
    src/unknown/7BB28.c
    src/unknown/A3B0.c
    src/unknown/AACC.c
    src/victoire.c
    src/video.c
    src/vignet.c
    src/vram.c
    src/world_map_677C0.c
    src/world_map_95CC.c
)

target_compile_definitions(${PROJECT_NAME} PRIVATE PLATFORM_PSYZ)
target_link_libraries(${PROJECT_NAME} PRIVATE psyz)
target_include_directories(${PROJECT_NAME} PRIVATE include)
target_include_directories(psyz PRIVATE src include tools/psyz/psyz/include)
target_compile_definitions(psyz PRIVATE __psyz)